retrieveUnpackaged/objects/Job_Applications__c.object
<CustomObject>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>name of the candidate</description>
        <label>Candidate Name</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <description>Letter to candidate</description>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Position applied by candidate</description>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>status of candidate</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Interview Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blacklisted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joining Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Job Applications</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Job Applications</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>